--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,6 +3,11 @@
 /*@import url(https://cdn.rawgit.com/singihae/Webfonts/master/style.css);*/
 
 
+#content::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 /*all start*/
 * {
     font-family: 'Noto Sans KR', sans-serif;
@@ -15,19 +20,46 @@
 }
 
 
-html, body {
+html {
+    height: 100% !important;
+    margin: 0;
+    padding: 0;
+    /*display: table;*/
+}
+
+body {
+    display: table;
     width: 100%;
-    height: 100%;
+    /*height: 100vh;*/
+    /*height: 100% !important;*/
+    height: 100% !important;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+    margin: 0;
 }
 
 .container {
-    width: 100%;
     height: 100%;
+    max-width: 100%;
+    /* This will remove the outer padding, and push content edge to edge */
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
+
+.row {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
 
 .main_container {
+    display: table;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 100% !important;
     background: url('main_bg.png');
     background-repeat:no-repeat;
     -webkit-background-size:cover;
@@ -37,9 +69,44 @@ html, body {
     background-position:center;
 }
 
+.main_container_in {
+    margin: 0 auto;
+    width: 100%;
+    /*height: 100%;*/
+    min-height: 100% !important;
+    /*height: 100vh;*/
+}
+
+.index_before {
+    overflow: auto;
+}
+
+.index_container {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+@media only screen and (min-width: 860px) {
+    .index_container {
+        width: 80%;
+    }
+
+    .container {
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
 /*grid로 나눠진 div 높이를 100%로 설정해줌*/
 .set_full {
-    height: 100%;
+    height: 100vh !important;
+}
+
+.set_full2{
+    height: 100% !important;
 }
 
 /*수직, 수평 중앙정렬을 위한 div start*/
@@ -59,9 +126,62 @@ html, body {
     position: relative;
     display: inline-block;
     text-align: center;
+}
+.main_center {
     color: white;
 }
+
+.index_outer,
+.index_inner,
+.index_center {
+    width: 100%;
+}
+
+.index_center {
+    margin: 25px 0px 20px 0px;
+}
+
+@media only screen and (min-width: 860px) {
+    .index_center {
+        margin: 50px 0px 50px 0px;
+    }
+}
+
+.index_feed {
+    text-align: left;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+    font-size: 1em;
+}
 /*수직, 수평 중앙정렬을 위한 div end*/
+
+/*sticky footer*/
+#body {
+    min-height:100%;
+    margin-top: 55px;
+    overflow:auto;
+    /*height:auto;*/
+}
+
+#content {
+    /*padding-bottom:1.9em;*/
+    width: 100%;
+    /*width: 80%;*/
+    /*margin: 0 auto;*/
+    display: inline-block;
+    overflow: auto;
+}
+
+#foot{
+    margin-top:-1.9em;
+    height:1.9em;
+    width: 100%;
+    display: inline-block;
+
+    /*임시 css*/
+    background-color: black;
+    height: 100%;
+}
 /*all end*/
 
 
@@ -108,6 +228,18 @@ html, body {
     margin-bottom: 4%;
 }
 
+.mail_btn {
+    border: 1px solid white;
+    background-color: transparent;
+    color: white;
+}
+
+.mail_login_btn {
+    border: 1px solid #ff5a5f;
+    background-color: #ff5a5f;
+    color: white;
+}
+
 .go_about {
     color: white;
     font-size: 1.1em;
@@ -146,6 +278,18 @@ html, body {
 }
 /*login, signup end*/
 
+/*기억해두기*/
+.remember_div label {
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.remember_me {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+    font-size: 1.1em;
+}
+/*login, signup end*/
 
 /*signup start*/
 .input_group {
@@ -175,7 +319,7 @@ html, body {
 .join_gp { /*check btn 필요한 그룹 묶어주기*/
     width: 100%;
     padding-left: 5%;
-    /*padding-right: 5%;*/
+    padding-right: 5%;
 }
 
 .join_gp > div > input {
@@ -201,7 +345,7 @@ html, body {
 .check_div {
     display: inline-block;
     width: 35%;
-    text-align: right;
+    /*text-align: right;*/
     /*text-indent: -5%;*/
 }
 
@@ -217,7 +361,11 @@ html, body {
     width: 100%;
     font-size: 14px;
 }
-/* 여기까지 */
+#error_div{ /*session에서의 에러메세지*/
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+/* 여기까지 우리 임의 추가 */
 
 .gender_div > input {
     display: none;
@@ -263,6 +411,238 @@ html, body {
 .rule_msg {
     font-size: 0.9em;
 }
-
 /*signup end*/
 
+/*valid mail start*/
+.mail_div {
+    font-size: 1.1em;
+}
+
+.mail_icon {
+    width: 40%;
+}
+
+.mail_div p {
+    margin: 10% 0 10% 0;
+}
+
+.mail_to {
+    color: #ff5a5f;
+}
+
+.mail_p1 {
+    font-size: 1.2em;
+}
+
+@media only screen and (max-width: 860px) {
+    .mail_div {
+        margin: 0 10% 0 10%;
+        font-size: 1em;
+    }
+}
+/*valid mail end*/
+
+/*index feed start*/
+.feed_head {
+    color: #ff5a5f;
+    font-size: 2em;
+    margin: 0px 0px 20px 0px;
+}
+
+@media only screen and (min-width: 860px) {
+    .feed_head {
+        font-size: 2.5em;
+        margin: 0px 0px 50px 0px;
+    }
+}
+
+.feed_each {
+    width: 100%;
+    display: inherit;
+    margin: 15px 0px 15px 0px;
+}
+
+.feed_each div div {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.feed_writer {
+    text-align: center;
+}
+
+.feed_lion {
+    width: 65%;
+}
+
+@media only screen and (min-width: 860px) {
+    .feed_lion {
+        width: 60%;
+    }
+}
+
+.feed_nickname {
+    font-size: 1.1em;
+}
+
+.lion_bg {
+    background: red;
+    border-radius: 50%;
+    padding: 20px;
+}
+
+.feed_course{
+    color: #484848;
+    font-size: 1.2em;
+    font-weight: 400;
+    margin-bottom: 4px;
+    display: inline-block;
+}
+
+.feed_course a {
+    color: #484848;
+}
+
+.feed_course a:hover {
+    color: #484848;
+    text-decoration: none;
+}
+
+.feed_prof_kyo {
+    color: #ff5a5f;
+    display: inline-block;
+}
+
+.feed_prof_major {
+    color: #27b5af;
+    display: inline-block;
+}
+
+.feed_content {
+    color: #484848;
+}
+
+.feed_etc {
+    color: #484848;
+    font-size: 0.9em;
+}
+
+.feed_etc img {
+    width: 20px;
+}
+
+.rating-head, .rating {
+    display: inline-block;
+}
+
+.rating-head {
+    width: 30%;
+    text-align: center;
+}
+
+/*.feed_star_m{*/
+/*    visibility: visible;   */
+/*}*/
+
+/*@media only screen and (min-width: 860px) {*/
+/*.feed_star_m{*/
+/*    visibility: hidden;*/
+/*    display: none;*/
+/*}*/
+/*}*/
+
+.feed_hr {
+    border: solid #dce0e0;
+    border-width: 0.5px 0px 0px 0px;
+}
+/*index feed end*/
+
+/*search page start*/
+.search_sen1{
+    color: #484848;
+    font-size: 1.7em;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+}
+
+.search_keyword {
+    font-size: 1.4em;
+    padding: 5px;
+    color: #ff5a5f;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+}
+
+.search_sen2{
+    color: #999999;
+    font-size: 1.4em;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+    line-height: 2em;
+}
+
+.search_tbl {
+    border-collapse: collapse;
+    line-height: 1.5;
+    border-top: 1px solid #dce0e0;
+    margin: 20px 10px;
+    text-align: center;
+    color: #484848;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+    font-size: 1.1em;
+    width: 100%;
+    margin-top: 50px;
+}
+.search_tbl thead th {
+    /*width: 150px;*/
+    padding: 10px;
+    /*font-weight: bold;*/
+    text-align: center;
+    vertical-align: top;
+    background: #f2f2f2;
+    margin: 20px 10px;
+    border-bottom: 1px solid #dce0e0;
+}
+.search_tbl thead tr {
+    line-height: 1.5em;
+}
+.search_tbl tr {
+    border-bottom: 1px solid #dce0e0;
+    line-height: 4.5em;
+}
+
+.search_tbl td {
+    /*width: 350px;*/
+    padding: 10px;
+    vertical-align: top;
+}
+
+.search_tbl td:nth-child(1){
+    width: 25%;
+}
+.search_tbl td:nth-child(2){
+    width: 50%;
+}
+.search_tbl td:nth-child(3){
+    width: 25%;
+}
+
+.lec_cate {
+    border-radius: 1em;
+    padding: 0px 6px 0px 6px;
+    margin-right: 5px;
+    font-size: 0.9em;
+    font-weight: 400;
+}
+
+.lec_kyo {
+    color: #ff5a5f;
+    border: 1px solid #ff5a5f;
+}
+
+.lec_major {
+    color: #27b5af;
+    border: 1px solid #27b5af;
+}
+/*search page end*/
