--- a/app/views/home/_main_top.html.erb
+++ b/app/views/home/_main_top.html.erb
@@ -1,21 +1,21 @@
- <div class="main_container">
-    <div class="container">
-      <div class="set_full col-lg-4 col-md-4 visible-lg-block visible-md-block"></div>
-      <div class="set_full col-lg-4 col-md-4 col-sm-12 col-xs-12 center_box">
-        <div class="outer">
-          <div class="inner">
-            <div class="centered">
-              <p class="logo">CLASSLION</p>
-              <p class="main_msg"><%= University.ids.count %>개의 학교, <%=User.ids.count%>명의 대학생,<br><%=Evaluation.ids.count%>개의 강의평가</p>
+<div class="main_container">
+   <div class="main_container_in">
+     <div class="set_full col-lg-4 col-md-4 visible-lg-block visible-md-block"></div>
+     <div class="set_full col-lg-4 col-md-4 col-sm-12 col-xs-12 center_box">
+       <div class="outer">
+         <div class="inner">
+           <div class="centered main_center">
+             <p class="logo">CLASSLION</p>
+             <p class="main_msg"><%= University.ids.count %>개의 학교, <%=User.ids.count%>명의 대학생,<br><%=Evaluation.ids.count%>개의 강의평가</p>
 
-              <a href="<%= login_path %>"><button type="button" class="login_btn">로그인</button></a><br>
-              <a href="<%= signup_path %>"><button type="button" class="join_btn">회원가입</button></a>
+             <a href="<%= login_path %>"><button type="button" class="login_btn">로그인</button></a><br>
+             <a href="<%= signup_path %>"><button type="button" class="join_btn">회원가입</button></a><br>
 
-              <a href="#" class="go_about">클래스라이언 알아보기!</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="set_full col-lg-4 col-md-4 visible-lg-block visible-md-block"></div>
-    </div>
-  </div>
+             <a href="#" class="go_about">클래스라이언 알아보기!</a>
+           </div>
+         </div>
+       </div>
+     </div>
+     <div class="set_full col-lg-4 col-md-4 visible-lg-block visible-md-block"></div>
+   </div>
+ </div>
