--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,85 +6,123 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <%# 네브바가 없는 로그인과 회원가입페이지에서는 해당 js가 로드되지않도록 하는 코드 %>
+    <% unless current_user.nil? %>
+        <%= javascript_include_tag "/nav/nav_jquery.menu-aim", "nav/nav_modernizr", "nav/nav_main" %>
+    <% end %>
+
     <!-- for encoding -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!--for mobile resize-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--for font -->
-    <link href="https://cdn.rawgit.com/YJSoft/Webfonts/0.1/BM_JUA.css" rel="stylesheet" type="text/css" />
-
-   <!-- 개발을 위한 임시 css -->
-    <style>
-      .rolebutton {
-        display: inline-block;
-      }
-      .searchfield {
-        display: inline-block;
-      }
-    </style>
   </head>
 
   <body>
-    <%# rails flash %>
-    <% flash.each do |name, msg| %>
+  <%# rails flash %>
+  <% flash.each do |name, msg| %>
       <%= render 'flash', name: name, msg: msg %>
-    <% end %>
+  <% end %>
 
-    <%# 로그인을 해야 상단 네비가 보여짐 %>
-    <% unless current_user.nil? %>
-    <header>
-      <!--로그인 x-->
-      <a href="/main">CLASSLION</a>
-      <div class="searchfield">
-        <%= form_tag evaluations_path, :method => :get do %>
-            <%= text_field_tag :search, params[:search], placeholder: "강의명, 교수명, 전공명으로 검색해보세요!" %>
-            <%= submit_tag "Search", :name => nil %>
-        <% end %>
+  <% unless current_user.nil? %>
+      <header class="cd-main-header">
+        <a href="/" class="cd-logo"><img src="/assets/nav_logo_mini.svg" alt="Logo"></a>
+
+        <div class="cd-search is-hidden">
+          <%= form_tag evaluations_path, :method => :get do %>
+              <%= text_field_tag :search, params[:search], placeholder: "강의명, 교수명, 전공명으로 검색해보세요!" %>
+              <%#= submit_tag "Search", :name => nil %>
+          <% end %>
+        </div> <!-- cd-search -->
+
+        <a href="#0" class="cd-nav-trigger"><!--Menu--><span></span></a>
+
+        <nav class="cd-nav">
+          <ul class="cd-top-nav">
+
+            <li class="has-children point_info nvs">
+              <a href="#0">
+                <img src="/assets/nav_point.svg" alt="point">
+                <%= current_user.point %> 점
+              </a>
+
+              <ul>
+                <li><a href="#0">강의평 하나당 300 점이<br>적립됩니다!</a></li>
+              </ul>
+            </li>
+
+            <li class="has-children lec_open nvs">
+              <a href="#0" class="onoff_a">
+                <img src="/assets/nav_on.svg" class="onoff" alt="on">
+                <div class="open_on"></div>
+                강평열람
+              </a>
+
+              <ul>
+                <% if !(current_user.has_role? 'evaluator') && current_user.point >= 1000 %>
+                    <li><br><%= current_user.point %> 점<br><%= button_to '오픈하기', roles_evaluator_path, class: "nav_btn", method: :post, :onClick => 'alert("1000포인트 차감! 강평열람 권한이 부여되었습니다!")' %><br></li>
+                <% elsif !(current_user.has_role? 'evaluator') && current_user.point < 1000 %>
+                    <li><br><%= current_user.point %> 점<br><%= button_to '오픈하기', roles_lack_path, class: "nav_btn", method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %><br></li>
+                <% else %>
+                    <li>강의평가를 열람해보세요!</li>
+                <% end %>
+              </ul>
+            </li>
+
+            <li class="has-children wiki_open nvs">
+              <a href="#0" class="onoff_a">
+                <img src="/assets/nav_off.svg" class="onoff" alt="off">
+                위키열람
+              </a>
+
+              <ul>
+                <% if !(current_user.has_role? 'wikier') && current_user.point >= 1000 %>
+                    <li><br><%= current_user.point %> 점<br><%= button_to '오픈하기', roles_wikier_path, class: "nav_btn", method: :post, :onClick => 'alert("1000포인트 차감! 위키열람 권한이 부여되었습니다!")' %><br></li>
+                <% elsif !(current_user.has_role? 'wikier') && current_user.point < 1000 %>
+                    <li><br><%= current_user.point %> 점<br><%= button_to '오픈하기', roles_lack_path, class: "nav_btn", method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %><br></li>
+                <% else %>
+                    <li>위키를 열람해보세요!</li>
+                <% end %>
+
+                <!--<li><a href="#0">1000 Points <button class="nav_btn">오픈하기</button></a></li>-->
+              </ul>
+            </li>
+
+            <li class="has-children account nvs">
+              <a href="#0">
+                <img src="/assets/nav_user.svg" alt="user">
+                <%= current_user.nickname %>
+              </a>
+
+              <ul>
+                <li><a href="/mypage">마이페이지</a></li>
+                <li><%= link_to "로그아웃", logout_path, method: :delete %></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </header> <!-- .cd-main-header -->
+
+      <!--지우면 안되는 부분-->
+      <main class="cd-main-content">
+        <nav class="cd-side-nav">
+        </nav>
+      </main> <!-- .cd-main-content -->
+
+      <div id="body">
+        <div id="content">
+          <%= yield %>
+        </div>
       </div>
 
-      <!--<input placeholder="강의명, 교수명, 전공명으로 검색해보세요!" type="text" name="courses" size="80">-->
-
-      <% if logged_in? %>
-          <%= current_user.point %> 점
-          <div class="rolebutton">
-            강평열람
-            <% if !(current_user.has_role? 'evaluator') && current_user.point >= 1000 %>
-              <%= button_to '오픈하기', roles_evaluator_path, method: :post, :onClick => 'alert("1000포인트 차감! 강평열람 권한이 부여되었습니다!")' %>
-            <% elsif !(current_user.has_role? 'evaluator') && current_user.point < 1000 %>
-              <%= button_to '오픈하기', roles_lack_path, method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %>
-            <% else %>
-              강의평가를 열람해보세요!
-            <% end %>
-          </div>
-          <div class="rolebutton">
-            위키열람
-            <% if !(current_user.has_role? 'wikier') && current_user.point >= 1000 %>
-                <%= button_to '오픈하기', roles_wikier_path, method: :post, :onClick => 'alert("1000포인트 차감! 위키열람 권한이 부여되었습니다!")' %>
-            <% elsif !(current_user.has_role? 'wikier') && current_user.point < 1000 %>
-                <%= button_to '오픈하기', roles_lack_path, method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %>
-            <% else %>
-                강의평가를 열람해보세요!
-            <% end %>
-          </div>
-          <%= current_user.nickname %>
-          <a href="/evaluations/new">평가하기</a>
-          <a href="/mypages/index">마이페이지</a>
-          <%= link_to "로그아웃", logout_path, method: :delete %>
-      <% else %>
-          <%= link_to "로그인", login_path %>
-      <% end %>
-    </header>
-    <% end %>
-
-    <%= yield %>
-
-    <% unless current_user.nil? %>
-    <footer>
-      <a href="#">ClassLion</a>
-      <%= button_to '권한삭제', roles_remove_path, method: :post %>
-      <%= button_to '포인트초기화', roles_reset_path, method: :post %>
-      <%= button_to '포인트충전', roles_charge_path, method: :post %>
-    </footer>
-    <% end %>
+      <div id="foot">
+          <a href="#">ClassLion</a>
+          <%= button_to '권한삭제', roles_remove_path, method: :post %>
+          <%= button_to '포인트초기화', roles_reset_path, method: :post %>
+          <%= button_to '포인트충전', roles_charge_path, method: :post %>
+      </div>
+  <% else %>
+      <%= yield %>
+  <% end %>
   </body>
 </html>
