--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -60,7 +60,7 @@ body {
     width: 100%;
     height: 100vh;
     min-height: 100% !important;
-    background: url('main_bg.png');
+    background-image: image-url('main_bg.png');
     /*background: image-url('main_bg.png');*/
     background-repeat:no-repeat;
     -webkit-background-size:cover;
