for asset pipeline

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -61,7 +61,7 @@ body {
     height: 100vh;
     min-height: 100% !important;
     background-image: image-url('main_bg.png');
-    /*background: image-url('main_bg.png');*/
+    //background: url('main_bg.png');
     background-repeat:no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
