css to css.scss

--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -16,7 +16,7 @@
                   <div class="feed_each">
                     <div class="row">
                       <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 feed_writer">
-                        <%= image_tag "lion_1.svg", class: :"feed_lion", alt: :"lion"%>
+                        <%= image_tag "lion_1.svg", class: "feed_lion", alt: "lion"%>
                         <!--<img src="/assets/lion_1.svg" class="feed_lion" alt="lion">-->
                         <p class="feed_nickname">감자감자왕가암자</p>
                       </div>
@@ -45,8 +45,8 @@
                           <%= e.body.html_safe %></p>
                         <p class="feed_etc">
                           <!--<img src="/assets/reply.svg" alt="lion"> · -->
-                          5시간 전 · <a href="#"><%= image_tag "siren.svg", alt: :"lion" %></a>
-                          <a href="#"><%= image_tag "reply.svg", alt: :"reply" %></a>
+                          5시간 전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
+                          <a href="#"><%= image_tag "reply.svg", alt: "reply" %></a>
                         </p>
                       </div>
 
