--- a/app/views/evaluations/index.erb
+++ b/app/views/evaluations/index.erb
@@ -1,144 +1,21 @@
 <!-- 10개짤라서 -->
+<h1>강평 목록</h1>
+<table>
+  <tr>
+    <th>강의명</th>
+    <th>교수명</th>
+    <th>학교</th>
+    <th>평점</th>
+    <th>내용</th>
+  </tr>
 
-<!--강의 검색결과 -->
-<div class="index_container">
-  <div class="container">
-    <div class="row">
-      <!--<div class="set_full col-lg-1 col-md-1 visible-lg-block visible-md-block"></div>-->
-      <div class="set_full col-lg-12 col-md-12 col-sm-12 col-xs-12 center_box">
-        <div class="outer index_outer">
-          <div class="inner index_inner">
-            <div class="centered index_center index_feed">
-
-              <p class="feed_head">최신 강의평</p>
-
-              <% @evaluations.each do |e| %>
-                  <div class="feed_each">
-                    <div class="row">
-                      <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 feed_writer">
-                        <!--<img src="/assets/lion_1.svg" class="feed_lion" alt="lion">-->
-                        <p class="feed_nickname">감자감자왕가암자</p>
-                      </div>
-
-                      <div class="col-lg-7 col-md-8 col-sm-9 col-xs-9">
-                        <p class="feed_course"><a href='/courses/show/<%= e.course.id %>'><%= e.course.lecture.name %></a></p>
-                        <p class="feed_prof_major"><span class="lec_cate lec_major">전공</span><%= e.course.professor.name %> 교수님</p>
-                        <p class="feed_prof_kyo"><span class="lec_cate lec_kyo">교양</span><%= e.course.professor.name %> 교수님</p>
-
-                        <div class="col-sm-12 col-xs-12 visible-sm-block visible-xs-block" style="border:1px solid black;">
-                          <div class="rating-head">총점</div>
-                          <div class="rating">
-                            <select id="pillbar" name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
-                            </select>
-                          </div>
-                          널널함<br>
-                          강의만족도 학점만족도<br>
-                        </div>
-
-                        <p class="feed_content">
-                          <%= e.body.html_safe %></p>
-                        <p class="feed_etc">
-                          <!--<img src="/assets/reply.svg" alt="lion"> · -->
-                          <!--5시간 전 · <a href="#"><img src="/assets/siren.svg" alt="lion"></a>-->
-                        </p>
-                      </div>
-
-                      <div class="col-lg-3 col-md-2 visible-lg-block visible-md-block">
-                        <div class="rating_div">
-                          <div class="rating-head">총점</div>
-                          <div class="rating">
-                            <select id="pillbar2" class="p" name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
-                            </select>
-                          </div>
-                        </div>
-
-                        <div class="rating_div">
-                          <div class="rating-head">널널함</div>
-                          <div class="rating">
-                            <select id="pillbar2" class="p" name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
-                            </select>
-                          </div>
-                        </div>
-
-                        <div class="rating_div">
-                          <div class="rating-head">강의만족도</div>
-                          <div class="rating">
-                            <select id="pillbar2" class="p" name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
-                            </select>
-                          </div>
-                        </div>
-
-                        <div class="rating_div">
-                          <div class="rating-head">학점만족도</div>
-                          <div class="rating">
-                            <select id="pillbar2" class="p" name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <hr class="feed_hr">
-              <% end %>
-
-            </div>
-          </div>
-        </div>
-        <!--<div class="set_full col-lg-1 col-md-1 visible-lg-block visible-md-block"></div>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<script>
-  $('#pillbar').barrating('show', {
-    theme: 'bars-pill',
-    initialRating: 'A',
-    showValues: true,
-    showSelectedRating: false,
-    allowEmpty: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
-  });
-
-  $('.p').barrating('show', {
-    theme: 'bars-pill',
-    initialRating: 'C',
-    showValues: true,
-    showSelectedRating: false,
-    allowEmpty: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
-  });
-</script>
+  <% @evaluations.each do |e| %>
+      <tr>
+        <td><a href='/courses/show/<%= e.course.id %>'><%= e.course.lecture.name %></a></td>
+        <td><%= e.course.professor.name %></td>
+        <td><%= e.course.university.local_name %></td>
+        <td><%= e.point_overall %></td>
+        <td><%= e.body.html_safe %></td>
+      </tr>
+  <% end %>
+</table>
