navbar images to rails image helper tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
 
             <li class="has-children account nvs">
               <a href="#0">
-                <img src="/assets/nav_user.svg" alt="user">
+                <%= image_tag "nav_user.svg", alt: "user" %>
                 <%= current_user.nickname %>
               </a>
 
