change yoojin style

--- a/app/assets/stylesheets/nav_style.css.scss
+++ b/app/assets/stylesheets/nav_style.css.scss
@@ -364,6 +364,16 @@ Top Navigation
   padding: 1em 5% !important;
 }
 
+.cd-top-nav > li a:hover {
+  color: #484848;
+  text-decoration: none;
+}
+
+.cd-top-nav > li a:active {
+  color: #484848;
+  text-decoration: none;
+}
+
 .cd-top-nav img{
   /* avatar image */
   position: absolute;
